# openmp_vs_rust

./: .gitignore  crunchy2_hardware.md  crunchy5_hardware.md  decision_flowchart.md  final_report.md  project_description.md  readme.md  readme.txt
Benchmark1/: analyze_overhead.py  disasm_omp.txt  openmp_benchmark1.cpp  report_benchmark1.md  results_openmp.csv  results_openmp_b.csv  results_overhead.csv  results_rust.csv  run_overhead.sh  summary_overhead_b.csv
Benchmark2/: report_benchmark2.md  results_openmp.csv  results_openmp_crunchy5.csv  results_rust.csv
Benchmark2-1/: report_benchmark2_1.md  results_openmp.csv  results_rust.csv
Benchmark2-2/: report_benchmark2_2.md  results_rust.csv
Benchmark3/: report_benchmark3.md  results_openmp.csv  results_openmp_bins1024.csv  results_openmp_bins16.csv  results_rust.csv
Benchmark4/: report_benchmark4.md  results_openmp_dynamic.csv  results_openmp_dynamic_3.csv  results_openmp_dynamic_b.csv  results_openmp_static.csv  results_openmp_static_3.csv  results_openmp_static_b.csv  results_rust_dynamic.csv  results_rust_dynamic_2.csv  results_rust_dynamic_3.csv  results_rust_dynamic_b.csv  results_rust_rayon.csv  results_rust_rayon_2.csv  results_rust_rayon_3.csv  results_rust_rayon_b.csv  results_rust_static.csv  results_rust_static_2.csv  results_rust_static_3.csv
Benchmark5/: disasm_omp.txt  plot_omp_spread_bimodal.py  report_benchmark5.md  results_omp_close.csv  results_omp_default.csv  results_omp_spread.csv  results_rust_close.csv  (+2 more)
Benchmark5/rust/: Cargo.toml  run_benchmark5_rust.sh
Benchmark5/rust/src/: main.rs
(+45 files in other folders)
